--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,15 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.signup-background {
+  --foreground: #141111;
+  --background: #e2e2e2;
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
